--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
 	"cSpell.enabled": true,
-	"cSpell.language": "de,de-DE"
+	"cSpell.language": "de,de-DE",
+	"cSpell.words": [
+		"Aufwirbelungen"
+	]
 }
